--- a/v2/13/index.html
+++ b/v2/13/index.html
@@ -58,6 +58,12 @@
                         <p>External Hardware Devices</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./07/" class="no-underline section-link">
+                        <h1>13.07</h1>
+                        <p>Secondary Storage</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
