Two new Internet pages

--- a/v2/18/index.html
+++ b/v2/18/index.html
@@ -46,6 +46,18 @@
                         <p>The Internet</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./05/" class="no-underline section-link">
+                        <h1>18.05</h1>
+                        <p>Internet Security</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./06/" class="no-underline section-link">
+                        <h1>18.06</h1>
+                        <p>Malware</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
