--- a/v2/13/05/index.html
+++ b/v2/13/05/index.html
@@ -68,6 +68,8 @@
                 for the value of register 2.
             </p>
 
+            <p>Table 1 shows an explanation of each of the assembly language commands.</p>
+
             <p class="table">
                 <img src="../../icons/table.svg" class="icon" />
                 Table 1
