--- a/v2/10/01/index.html
+++ b/v2/10/01/index.html
@@ -31,7 +31,7 @@
                 A valuable jewel was taken from a museum by one of Alice, Bob or Carl. The following facts are gathered:
             </p>
             
-            <ol class="less-padding-left">
+            <ol class="less-padding-left spaced-out">
                 <li>Alice had an alibi after midnight, so she could only have stolen the jewel before midnight</li>
                 <li>If and only if the thief used a rope, then Bob was in the storage room before the theft</li>
                 <li>The jewel was stolen after midnight if and only if Carl was in the main hall before the theft</li>
