--- a/v2/13/05/index.html
+++ b/v2/13/05/index.html
@@ -224,7 +224,7 @@
                 </tr>
                 <tr>
                     <td><code>
-                        <span class="keyword">BLE</span> <span class="other">[label]</span>
+                        <span class="keyword">BLT</span> <span class="other">[label]</span>
                     </code></td>
                     <td>
                         If the previous comparison was less than, jump to the position specified by
