--- a/v2/index.html
+++ b/v2/index.html
@@ -81,73 +81,73 @@
                 <div class="section-flexbox homepage-flexbox">
                     <a href="./9/" class="no-underline section-link">
                         <h1>Section 9</h1>
-                        <p>Programming <br /> <em>(in progress)</em></p>
+                        <p>Programming</p>
                     </a>
                 </div>
                 <div class="section-flexbox homepage-flexbox">
                     <a href="./10/" class="no-underline section-link">
                         <h1>Section 10</h1>
-                        <p>Problem Solving <br /> <em>(in progress)</em></p>
+                        <p>Problem Solving</p>
                     </a>
                 </div>
                 <div class="section-flexbox homepage-flexbox">
                     <a href="./11/" class="no-underline section-link">
                         <h1>Section 11</h1>
-                        <p>Data Representation <br /> <em>(in progress)</em></p>
+                        <p>Data Representation</p>
                     </a>
                 </div>
                 <div class="section-flexbox homepage-flexbox">
                     <a href="./12/" class="no-underline section-link">
                         <h1>Section 12</h1>
-                        <p>Computer Systems <br /> <em>(in progress)</em></p>
+                        <p>Computer Systems</p>
                     </a>
                 </div>
                 <div class="section-flexbox homepage-flexbox">
                     <a href="./13/" class="no-underline section-link">
                         <h1>Section 13</h1>
-                        <p>Computer Architecture <br /> <em>(in progress)</em></p>
+                        <p>Computer Architecture</p>
                     </a>
                 </div>
                 <div class="section-flexbox homepage-flexbox">
                     <a href="./14/" class="no-underline section-link">
                         <h1>Section 14</h1>
-                        <p>Communication <br /> <em>(in progress)</em></p>
+                        <p>Communication</p>
                     </a>
                 </div>
                 <div class="section-flexbox homepage-flexbox">
                     <a href="./15/" class="no-underline section-link">
                         <h1>Section 15</h1>
-                        <p>Data Structures <br /> <em>(in progress)</em></p>
+                        <p>Data Structures</p>
                     </a>
                 </div>
                 <div class="section-flexbox homepage-flexbox">
                     <a href="./16/" class="no-underline section-link">
                         <h1>Section 16</h1>
-                        <p>Algorithms <br /> <em>(in progress)</em></p>
+                        <p>Algorithms</p>
                     </a>
                 </div>
                 <div class="section-flexbox homepage-flexbox">
                     <a href="./17/" class="no-underline section-link">
                         <h1>Section 17</h1>
-                        <p>Regular Languages <br /> <em>(in progress)</em></p>
+                        <p>Regular Languages</p>
                     </a>
                 </div>
                 <div class="section-flexbox homepage-flexbox">
                     <a href="./18/" class="no-underline section-link">
                         <h1>Section 18</h1>
-                        <p>Networks <br /> <em>(in progress)</em></p>
+                        <p>Networks</p>
                     </a>
                 </div>
                 <div class="section-flexbox homepage-flexbox">
                     <a href="./19/" class="no-underline section-link">
                         <h1>Section 19</h1>
-                        <p>Databases <br /> <em>(in progress)</em></p>
+                        <p>Databases</p>
                     </a>
                 </div>
                 <div class="section-flexbox homepage-flexbox disabled">
                     <a href="./20/" class="no-underline section-link">
                         <h1>Section 20</h1>
-                        <p>Miscellaneous Topics <br /> <em>(in progress)</em></p>
+                        <p><em>Coming soon...</em></p>
                     </a>
                 </div>
             </div>
