--- a/v2/17/index.html
+++ b/v2/17/index.html
@@ -58,6 +58,12 @@
                         <p>Turing Machines</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./qs/" class="no-underline section-link">
+                        <h1>Questions</h1>
+                        <p>Revision Questions</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
